# raylib-ffi

./: .gitmodules  CODEOWNERS  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: build.yml  clippy.yml
examples/: basic.rs  core_3d_camera_free.rs  shaders_basic_lighting.rs
examples/shaders/: lighting.fs
scripts/: regenerate_colors.py  regenerate_enums.py
src/: colors.rs  enums.rs  lib.rs  macros.rs  wrapper.h
src/raylib/: ffi.rs  logging.rs  mod.rs  palette.rs  window.rs
src/raylib/xlat/: cgmath.rs  mod.rs  rgb.rs
