[package]
name = "raylib-ffi"
version = "4.5.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Automatic raw Rust bindings to raylib"
documentation = "https://docs.rs/raylib-ffi"
readme = "README.md"
homepage = "https://github.com/ewpratten/raylib-ffi"
repository = "https://github.com/ewpratten/raylib-ffi"
license = "GPL-3.0"
keywords = ["raylib", "graphics"]
categories = ["external-ffi-bindings", "graphics", "multimedia", "rendering"]
exclude = [
    "third_party/raylib/examples/*",
    "third_party/raylib/parser/*",
    "third_party/raylib/logo/*",
    "third_party/raylib/projects/*"
]
build = "build/main.rs"

[build-dependencies]
bindgen = "^0.65.0"
cmake = "^0.1.49"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["enums", "macros", "colors"]
enums = []
macros = []
colors = []