[package]
name = "raylib-ffi"
version = "5.0.1"
authors = ["Evan Pratten <ewpratten@gmail.com>"]
edition = "2021"
description = "Automatic raw Rust bindings to raylib"
documentation = "https://docs.rs/raylib-ffi"
readme = "README.md"
homepage = "https://github.com/ewpratten/raylib-ffi"
repository = "https://github.com/ewpratten/raylib-ffi"
license = "GPL-3.0"
keywords = ["raylib", "graphics"]
categories = ["external-ffi-bindings", "graphics", "multimedia", "rendering"]
exclude = [
    "third_party/raylib/examples/*",
    "third_party/raylib/logo/*",
    "third_party/raylib/projects/*"
]
build = "build/main.rs"

[dependencies]
num-traits = "0.2.17"
num-derive = "0.4.1"

[build-dependencies]
bindgen = "0.69.1"
cmake = "^0.1.49"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[features]
default = ["macros"]
macros = []
dylib = []
