[package]
name = "raylib"
version = "5.5.0"
authors = [
    "Evan Pratten <ewpratten@gmail.com>",
    "Montegappα Cacilhας <montegasppa@cacilhas.info>",
]
edition = "2021"
description = "Bindings to Raylib."
documentation = "https://docs.rs/raylib-ffi"
readme = "README.md"
homepage = "https://github.com/cacilhas/raylib-rs"
repository = "https://github.com/cacilhas/raylib-rs"
license = "GPL-3.0"
keywords = ["raylib", "graphics"]
categories = ["game-engine", "graphics", "multimedia", "rendering"]
exclude = [
    "third_party/raylib/examples/*",
    "third_party/raylib/logo/*",
    "third_party/raylib/projects/*",
]
build = "build/main.rs"

[dependencies]
num-traits = "^0.2.19"
num-derive = "^0.4.2"

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.51"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"

[features]
default = ["macros"]
macros = []
dylib = []
